--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,25 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title> taskApp </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-item *ngFor="let task of lists">
+    <ion-label>{{task}}</ion-label>
+    <ion-checkbox slot="start" color="success"></ion-checkbox>
+  </ion-item>
+    <ion-item *ngIf="showInput">
+      <ion-input #task placeholder='type task'></ion-input>
+      <ion-button type="submit" (click)='addTask(task.value)'>add</ion-button>
+    </ion-item>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-toolbar class="add-task-icon">
+    <ion-icon
+      slot="end"
+      size="large"
+      name="create-outline"
+      (click)="showInput = !showInput"
+    ></ion-icon>
+  </ion-toolbar>
 </ion-content>
