--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,16 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+// task modal
+
+.task_modal {
+  .modal-wrapper {
+      --height: 50vh;
+      --min-height: 320px;
+      --border-radius: 20px 20px 0 0;
+      position: absolute;
+      bottom: 0;
+      background-color: #545454;
+  }
+}
