--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -15,17 +15,30 @@
 }
 ion-col{
   // border: 1px solid #fff;
+  position: relative;
   display: grid;
   place-items: center;
   color: darkgrey;
   height: 40px;
+  width: fit-content;
+  border-radius: 50%;
   .dot{
     width: 4px;
     height: 4px;
     background-color: red;
     border-radius: 50%;
   }
-  width: fit-content;
-  border-radius: 50%;
+  .current_date{
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: var(--ion-color-success);
+    border-radius: 50%;
+    z-index: -1;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
